# K9Tax

./: .replit  README.md  k9tax_db  pyproject.toml  report.docx  testfile.txt
data/: KNGF.csv  belasting.csv  eigenaar.csv  hond.csv
data/Source Files/: KNGF.xlsx  Random gegevens.xlsx  belasting.xlsx  eigenaar.xlsx  hond.xlsx
examples/: fat_run.py  run_ete_tc1.py  run_fat_scripts.py  run_fat_tc1.py  run_scripts.py  run_zones_tc1.py  zones_run.py
src/: import_dog.py
src/entities/: base_model.py  breed.py  db_connection.py  dog.py  dog_breed.py  kngf.py  owner.py  tax.py
src/loading/: breed_loader.py  breedloader.py  dog_loader.py  kngf_loader.py  loaders.py  owner_loader.py  tax_loader.py
src/logic/: dog_breed_logic.py
src/util/: db_connection.py  setup.py
test/: conftest.py
test/fat/: generate_testdata.py  templates.yaml
test/fat/testcases/: 10000000_base_case.yaml  10000101_name_matching.yaml  10000201_no_name_match.yaml
test/fat/testdata/: eigenaar.csv  hond.csv  verify_report_city.csv  verify_rule_eigenaar.csv  verify_rule_hond.csv
test/integration/: loading_breed_test.py  loading_breeds_test.py  loading_dog_test.py  loading_hond_test.py  loading_kngf_test.py  loading_owner_test.py  loading_tax_test.py
test/integration/data/: KNGF.csv  belasting.csv  breeds.csv  dogs.csv  eigenaar.csv
test/unit/: breed_match_requirement.py  breed_match_requirement_test.py  breed_match_test.py  hond.csv  import_dog_test.py
