[tool.poetry]
name = "k9tax"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-Levenshtein = "^0.20.5"
pandas = "^1.5.0"
peewee = "^3.15.3"
numpy = "^1.23.3"
pytest = "^7.1.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
